--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,8 @@
 <% provide(:title, @user.name) %>
+
+<div>
+<h1> User profile </h1>
+
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
@@ -7,4 +11,6 @@
       </h1>
     </section>
   </aside>
+</div>
+
 </div>
