--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,41 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+    <%= link_to "Walk-In EMR", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
+<!--
+<li>
+<form>
+<div class="container">
+        <div class="col-xs-6">
+            <div id="custom-search-input">
+                <div class="input-group col-xs-4">
+                    <input type="text" name="find_str" class="form-control input-sm" placeholder="Find patient" />
+                    <span class="input-group-btn">
+                        <button class="btn btn-info btn-sm" type="button">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </div>
+</div>
+</form>
+</li>
+-->	      
+<% if logged_in? %>
+	<li>
+	  <form>
+	     <div class="form-group form-group-sm">
+                <div class="col-xs-10">
+			<input id="findbox" type="text" name="find_str" class="form-control input-sm" placeholder="Find patient"/>
+		</div>
+	     </div>
+	  </form>
+	</li>
+<% end %>
+
+        <li><%= link_to "Patients", patients_path %></li>
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
         <% if logged_in? %>
