--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,12 @@
 
 <div class="center jumbotron">
-  <h1>Walk-In EMR </h1>
 
   <h2>
     This is the home page for the
-    <a href="http://ruby.drlena.com">Walk In EMR</a> project
+    <a href="<%= project_url  %>">Walk In EMR</a> project
     sample application.
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "User signup", signup_path, class: "btn btn-sm btn-primary" %>
 </div>
 
