--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,36 +2,34 @@
   <div class="container">
     <%= link_to "Walk-In EMR", root_path, id: "logo" %>
     <nav>
+	    <span class="navbar-text"> Vert centered </span>
       <ul class="nav navbar-nav navbar-right">
-<!--
-<li>
-<form>
-<div class="container">
-        <div class="col-xs-6">
-            <div id="custom-search-input">
-                <div class="input-group col-xs-4">
-                    <input type="text" name="find_str" class="form-control input-sm" placeholder="Find patient" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-info btn-sm" type="button">
-                            <i class="glyphicon glyphicon-search"></i>
-                        </button>
-                    </span>
-                </div>
-            </div>
-        </div>
-</div>
-</form>
-</li>
--->	      
+
 <% if logged_in? %>
-	<li>
-	  <form>
+
+       <li> 
+<!--	<form id='datepicker'> -->
+          <%= form_for :datepicker do |f| %>
 	     <div class="form-group form-group-sm">
-                <div class="col-xs-10">
-			<input id="findbox" type="text" name="find_str" class="form-control input-sm" placeholder="Find patient"/>
+                <div class="col-xs-8">	     
+	          <%= f.text_field :datepicker, 'data-behaviour' => 'datepicker', 'name' => 'mydate', :value => Date.today, :onChange => 'javascript: this.form.submit()' %>
+<!--	  	  <input id="mydate" type="text" name="mydate" data-behaviour='datepicker' > -->
 		</div>
 	     </div>
-	  </form>
+       <% end %>
+<!--        </form>  -->
+       </li>
+	<li class="nav-item active">
+<!--	   <form id="findbox">  -->
+          <%= form_for :findbox do |f| %>
+	     <div class="form-group form-group-sm">
+                <div class="col-xs-10">
+<!--	  	  <input id="findbox" type="text" name="find_str" placeholder="Find patient"/>  -->
+		  <%= f.text_field :findstr, placeholder: 'Find patient' %>
+		</div>
+	     </div>
+     <% end %>
+<!--           </form>  -->
 	</li>
 <% end %>
 
@@ -60,3 +58,13 @@
     </nav>
   </div>
 </header>
+
+<script type="text/javascript">
+$(document).on("focus", "[data-behaviour~='datepicker']", function(e){
+    $(this).datepicker({"format": "dd-mm-yyyy", "weekStart": 1, "autoclose": true, "todayBtn": true, "todayHighlight": true});
+});
+
+//$(document).on("changeDate", "[data-behaviour~='datepicker']", function(e){
+//	$('#datepicker').submit();
+//});
+</script>
