--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -20,4 +20,4 @@
 	</table>
 </ul>
 <p>
-<%= will_paginate(@users, :renderer =>  WillPaginate::ActionView::LinkRenderer, class: 'pagination-sm') %>
+<%= will_paginate(@patients, :renderer =>  WillPaginate::ActionView::LinkRenderer, class: 'pagination-sm') %>
