--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,6 +6,7 @@
   <nav>
     <ul>
       <li><%= link_to "About",   about_path %></li>
+       <li><%= link_to "Help", help_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
       <li><a href="<%= project_url  %>">News</a></li>
     </ul>
