--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,6 @@
   <div class="container">
     <%= link_to "Walk-In EMR", root_path, id: "logo" %>
     <nav>
-	    <span class="navbar-text"> Vert centered </span>
       <ul class="nav navbar-nav navbar-right">
 
 <% if logged_in? %>
@@ -34,8 +33,7 @@
 <% end %>
 
         <li><%= link_to "Patients", patients_path %></li>
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
+        <li><%= link_to "Day Sheet", daysheet_path %></li>
         <% if logged_in? %>
 	  <li><%= link_to "Users", users_path %></li>
           <li class="dropdown">
