doctors table added, columns added to patients and visits, routing changes

--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -12,6 +12,11 @@
 	      DOB: <%= @patient.dob %> : <%= @patient.age %> y/o  <%= @patient.sex_str %>
 	      Health Card: <%= @patient.ohip_num %> 
 	      Phone: <%= @patient.phone %>
+	      Last Visit: <%= @patient.last_visit_date %>
+	      Addr: <%= @patient.addr %>
+		    <%= @patient.city %> <%= @patient.prov %> 
+		    <%= @patient.postal %>
+		    <%= @patient.country %>
            </pre>
       </h1>
     </section>
