--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,14 +4,13 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
 
-<% if logged_in? %>
-
+<% if controller_name == 'patients' %>
        <li> 
 <!--	<form id='datepicker'> -->
-          <%= form_for :datepicker do |f| %>
+          <%= form_for :datepicker,method: :get  do |f| %>
 	     <div class="form-group form-group-sm">
                 <div class="col-xs-8">	     
-	          <%= f.text_field :datepicker, 'data-behaviour' => 'datepicker', 'name' => 'mydate', :value => Date.today, :onChange => 'javascript: this.form.submit()' %>
+	          <%= f.text_field :datepicker, 'data-behaviour' => 'datepicker', 'name' => 'date', :value => Date.today, :onChange => 'javascript: this.form.submit()' %>
 <!--	  	  <input id="mydate" type="text" name="mydate" data-behaviour='datepicker' > -->
 		</div>
 	     </div>
@@ -20,7 +19,7 @@
        </li>
 	<li class="nav-item active">
 <!--	   <form id="findbox">  -->
-          <%= form_for :findbox do |f| %>
+          <%= form_for :findbox, method: :get, url: patients_path  do |f| %>
 	     <div class="form-group form-group-sm">
                 <div class="col-xs-10">
 <!--	  	  <input id="findbox" type="text" name="find_str" placeholder="Find patient"/>  -->
@@ -59,7 +58,7 @@
 
 <script type="text/javascript">
 $(document).on("focus", "[data-behaviour~='datepicker']", function(e){
-    $(this).datepicker({"format": "dd-mm-yyyy", "weekStart": 1, "autoclose": true, "todayBtn": true, "todayHighlight": true});
+    $(this).datepicker({"format": "yyyy-mm-dd", "weekStart": 1, "autoclose": true, "todayBtn": true, "todayHighlight": true});
 });
 
 //$(document).on("changeDate", "[data-behaviour~='datepicker']", function(e){
