--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -4,6 +4,10 @@
 	<td><%= patient.dob %></td>
 	<td><%= patient.ohip_num %> </td>
 	<td><%= patient.phone %> </td> 
+	<td><%= patient.addr %> </td> 
+	<td><%= patient.city %> </td> 
+	<td><%= patient.prov %> </td> 
+	<td><%= patient.postal %> </td> 
      </tr>
 
 
