--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -4,7 +4,7 @@
 <p>
 
 <ul class="users">
-<table style="width:800px; padding: 10px;" >
+<table style="width:1000px; padding: 10px;" >
   <thead>
       <tr>
           <th>Name</th>
@@ -12,6 +12,10 @@
           <th>DOB</th>
           <th>OHIP#</th>
           <th>Phone</th>
+ 	  <th>Address</th>
+	  <th>City</th>
+	  <th>Prov</th>
+	  <th>Postal </th>
       </tr>
   </thead>
 
