--- a/app/views/visits/_visit.html.erb
+++ b/app/views/visits/_visit.html.erb
@@ -1,7 +1,8 @@
 <li id="visit-<%= visit.id %>">
-  <span class="patient"><%= link_to visit.patient.lname, visit.patient %></span>
-  <span class="content"><%= visit.notes %></span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(visit.created_at) %> ago.
-  </span>
+  <!--  <span class="patient"><%= link_to visit.patient.lname, visit.patient %></span> -->
+  <span class="patient"><%= link_to time_tag(visit.created_at), visits_path + '/'+ visit.id.to_s %>  </span> 
+  
+  <span class="doctor">Doctor: <%= visit.doctor.lname %></span>
+  <span class="doctor">Diag. Code: <%= visit.diag_code %></span>
+  <span class="doctor">Proc. Code: <%= visit.proc_code %></span>
 </li>
