--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -9,7 +9,7 @@
       <h1>
 	   <pre>
 	      Name: <%= @patient.lname %>,  <%= @patient.fname %>
-	      DOB: <%= @patient.dob %> : <%= @patient.age %> y/o  <%= @patient.sex_str %>
+	      DOB: <%= @patient.dob %> : <%= @patient.age %> y/o  <%= @patient.sex %>
 	      Health Card: <%= @patient.ohip_num %> 
 	      Phone: <%= @patient.phone %>
 	      Last Visit: <%= @patient.last_visit_date %>
@@ -22,8 +22,8 @@
     </section>
   </aside>
   <div class="col-md-8">
+    <h3>Visits: (<%= @patient.visits.count %>)</h3>
     <% if @patient.visits.any? %>
-      <h3>Notes (<%= @patient.visits.count %>)</h3>
       <ol class="microposts">
         <%= render @visits %>
       </ol>
