--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,10 +3,10 @@
 
   <h2>
     This is the home page for the
-    <a href="<%= project_url  %>">Walk In EMR</a> project
-    sample application.
+    <a href="<%= project_url  %>">Walk In EMR</a> project 
   </h2>
 
-  <%= link_to "User signup", signup_path, class: "btn btn-sm btn-primary" %>
+    Inspired by bow defunct Health Screen EMR, this application is web-based and built using Ruby on Rails with Postgres SQL back end
+
 </div>
 
