--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,9 @@
 <li>
   <%= link_to user.name, user %>
-  <% if current_user.admin? && !current_user?(user) %>
-    | <%= link_to "delete", user, method: :delete,
-                                  data: { confirm: "You sure?" } %>
+  <% if current_user.admin? %>
+	  | <%= link_to "Edit", edit_user_path(user)  %>
+     <% if !current_user?(user) %>
+        | <%= link_to "Delete", user, method: :delete, data: { confirm: "You sure?" } %>
+     <%end %>
   <% end %>
 </li>
