--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,13 +4,11 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
 
-<% if controller_name == 'visits' %>
+<% if controller_name == 'daysheet' %>
        <li> 
-       <%= form_with url: visits_path, method: :get, skip_enforcing_utf8: :true  do |f| %>
+       <%= form_with  method: :get, skip_enforcing_utf8: :true  do |f| %>
 	     <div class="form-group form-group-sm">
                 <div class="col-sm-12">	     
-			<%# f.text_field :datepicker, 'name' => 'date', 'data-behaviour' => 'datepicker',
-	:onChange => 'javascript: this.form.submit()' %>
 		<%= f.date_field :datepicker, 'name' => 'date', :onChange => 'javascript: this.form.submit()' %>
 		</div>
 	     </div>
@@ -30,20 +28,19 @@
 <% end %>
 
         <li><%= link_to "Patients", patients_path %></li>
-        <li><%= link_to "Day Sheet", daysheet_path %></li>
-        <% if logged_in? %>
-	  <li><%= link_to "Users", users_path %></li>
+        <li><%= link_to "Day Sheet", daysheet_index_path %></li>
+
+        <% if current_user.admin?  %>
+          <li> <%= link_to "Log out", logout_path, method: :delete %> </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
+              Admin <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-	      <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+	      <li><%= link_to "Profile", edit_user_path(current_user) %></li>
+	      <li><%= link_to "Add User", signup_path(current_user) %></li>
               <li class="divider"></li>
-              <li>
-                <%= link_to "Log out", logout_path, method: :delete %>
-              </li>
+	        <li><%= link_to "Users", users_path %></li>
             </ul>
           </li>
         <% else %>
