--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, @patient.full_name) %>
 
 <div>
-<h1> Patient profile </h1>
+	<h1><%= @patient.full_name %> -  Patient profile </h1>
 
 <div class="row">
-  <aside class="col-md-4">
+  <aside class="col-md-6">
     <section class="user_info">
       <h1>
 	   <pre>
@@ -20,8 +20,13 @@
            </pre>
       </h1>
     </section>
+    <section class="new_visit">
+	    
+	    <%= button_to "New Visit", new_patient_visit_path(@patient), class: "btn btn-primary", :method => "get" %>
+        
+    </section>
   </aside>
-  <div class="col-md-8">
+  <div class="col-md-6">
     <h3>Visits: (<%= @patient.visits.count %>)</h3>
     <% if @patient.visits.any? %>
       <ol class="microposts">
