--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
-<% provide(:title, 'Sign up') %>
+<% provide(:title, 'Add new user') %>
 <% provide(:button_text, 'Create my account') %>
-<h1>Sign up</h1>
+<h1>Add new user</h1>
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-4 col-md-offset-4">
     <%= render 'form' %>
   </div>
 </div>
