daysheet/visits updates

--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -2,9 +2,9 @@
 %>
 
 <tr>
-	<td><%= pat.full_name %></td>
+	<td><%= link_to time_tag(visit.created_at), patient_visit_path(pat,visit) %> </td>
+	<td><%= link_to pat.full_name, pat %></td>
 	<td><%= visit.doctor.lname %></td>
-	<td><%= visit.created_at %></td>
 	<td><%= visit.notes.to_s.first(40)+ '..'  %></td>
 	<td><%= visit.diag_code %></td>
 	<td><%= visit.proc_code %></td>
