--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -4,12 +4,13 @@
 <p>
 
 <ul class="users">
-<table style="width:1000px; padding: 10px;" >
+<table style="width:1100px; padding: 10px;" >
   <thead>
       <tr>
           <th>Name</th>
           <th>Sex</th>
-          <th>DOB</th>
+	  <th>Last Visit </th>
+          <th>Age</th>
           <th>OHIP#</th>
           <th>Phone</th>
  	  <th>Address</th>
