--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,18 @@
 
-<div class="center jumbotron">
-
   <h2>
     This is the home page for the
     <a href="<%= project_url  %>">Walk In EMR</a> project 
   </h2>
 
-    Inspired by bow defunct Health Screen EMR, this application is web-based and built using Ruby on Rails with Postgres SQL back end
+  Walk-In web app is basic EMR intended to replace now defunct Health Screen EMR.  
+  Built using Ruby on Rails with Postgres SQL back end, Walk-In EMR is simple to use, is tailored to walk-in clinic setting and provides basic functionality of any EMR system including:
 
-</div>
+   <ul>
+	   <li>Patient management</li>
+
+	   <li>Patient search by last name/health card humber</li>
+	   <li>Visit management</li>
+	   <li>Doctor management</li>
+   </ul>
+
 
