--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -13,8 +13,30 @@ $gray-medium-light: #eaeaea;
 
 /* universal */
 
-body {
-  padding-top: 60px;
+html,body {
+  height: 100%;
+  margin: 0;
+  padding-top: 0; 
+}
+
+#container {
+   min-height:100%;
+   position:relative;
+}
+
+#header {
+   padding:10px;
+   height:72px;
+}
+#body {
+   padding:10px;
+   padding-bottom:72px;   /* Height of the footer */
+}
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:72px;   /* Height of the footer */
 }
 
 section {
@@ -39,7 +61,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 1.5em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
