--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,7 +30,7 @@
         <li><%= link_to "Patients", patients_path %></li>
         <li><%= link_to "Day Sheet", daysheet_index_path %></li>
 
-        <% if current_user.admin?  %>
+        <% if logged_in? && current_user.admin?  %>
           <li> <%= link_to "Log out", logout_path, method: :delete %> </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
