--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,23 @@
   </head>
 
   <body>
-    
+   <div id="container" class="container">
+    <div id="header"> 
     <%= render 'layouts/header' %>
-    
-    <div class="container">
+    </div>
+
+    <div id="body">
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
       <%= yield %>
+    </div>
+
+    <div id="footer">
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
+   </div>
   
   </body>
 </html>
