--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -1,7 +1,8 @@
      <tr>
 	<td><%= link_to "#{patient.lname}, #{patient.fname}", patient %> </td>
 	<td><%= patient.sex %></td> 
-	<td><%= patient.dob %></td>
+	<td><%= patient.last_visit_date %> </td> 
+	<td><%= patient.age %></td>
 	<td><%= patient.ohip_num %> </td>
 	<td><%= patient.phone %> </td> 
 	<td><%= patient.addr %> </td> 
