--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [@patient, @visit], :url => patient_visits_path  do |f| % > 
+<%= form_with model: [@patient, @visit] do |f| %> <!-- <%#, :url => patient_visits_path  do |f| %> -->
   <%= render 'shared/error_messages', object: f.object %>
 
   <%= f.label :doctor %>
