edit button in show forms

--- a/app/views/diagnoses/show.html.erb
+++ b/app/views/diagnoses/show.html.erb
@@ -15,6 +15,7 @@
            </pre>
       </h1>
     </section>
+  <%= button_to "Edit", edit_diagnosis_path(@diagnosis), class: "btn btn-primary", :method => "get" %>
   </aside>
 </div>
 
