--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -27,7 +27,7 @@
     </section>
     <section class="doctor">
 	    
-	    <%= button_to "Back", doctors_path, class: "btn btn-primary", :method => "get" %>
+	    <%= button_to "Edit", edit_doctor_path(@doctor), class: "btn btn-primary", :method => "get" %>
         
     </section>
   </aside>
