--- a/app/views/procedures/edit.html.erb
+++ b/app/views/procedures/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Diagnoses#edit</h1>
-<p>Find me in app/views/diagnoses/edit.html.erb</p>
+<% provide(:title, 'Edit procedure') %>
+<% provide(:button_text, 'Save changes') %>
+<h1>Edit procedure</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= render 'form' %>
+  </div>
+</div>
