--- a/app/views/procedures/show.html.erb
+++ b/app/views/procedures/show.html.erb
@@ -13,7 +13,7 @@
 	      Description:  <%= @procedure.descr %>
 	      Cost: <%= @procedure.cost %>
 	      Unit: <%= @procedure.unit %>
-	      Fac req?: <%= @procedure.faq_req %>
+	      Fac req?: <%= @procedure.fac_req %>
 	      Adm req?: <%= @procedure.adm_req %>
 	      Diag req?: <%= @procedure.diag_req %>
 	      Ref req?: <%= @procedure.ref_req %>
@@ -24,6 +24,7 @@
            </pre>
       </h1>
     </section>
+    <%= button_to "Edit", edit_procedure_path(@procedure), class: "btn btn-primary", :method => "get" %>
   </aside>
 </div>
 
