--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -3,10 +3,6 @@
 
 <h1> Visits <%= date.to_s  %> (<%= @daysheet.count %>) </h1>
 
-  <p>
-<%= will_paginate(@daysheet, :renderer =>  WillPaginate::ActionView::LinkRenderer, class: 'pagination-sm') %>
-<p>
-
 <ul class="users">
 <table style="width:1000px; padding: 10px;" >
   <thead>
@@ -30,4 +26,4 @@
 </table>
 </ul>
 <p>
-<%= will_paginate(@daysheet, :renderer =>  WillPaginate::ActionView::LinkRenderer, class: 'pagination-sm') %>
+<%= will_paginate(@daysheet) %> <!-- , :renderer =>  WillPaginate::ActionView::LinkRenderer, class: 'pagination-sm') %> -->
