--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Doctors#new</h1>
-<p>Find me in app/views/doctors/new.html.erb</p>
+<% provide(:title, 'New Doctor') %>
+<% provide(:button_text, 'Save') %>
+<h1>New Doctor </h1>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= render 'form' %>
+  </div>
+</div>
