--- a/app/views/procedures/index.html.erb
+++ b/app/views/procedures/index.html.erb
@@ -1,7 +1,5 @@
 <% provide(:title, 'All procedures') %>
 
-<p>
-<h1> Procedures </h1>
 <ul class="users">
 <table style="width:1100px; padding: 10px;" >
   <thead>
@@ -32,7 +30,11 @@
 <p>
 <%= will_paginate(@procedures) %>
 
-<p>
-    <section class="new_procedure_code">
-	    <%= button_to "New Procedure", new_procedure_path, class: "btn btn-primary", :method => "get" %>
+<% if  current_user.admin?  %>
+    <section class="new_diag_code">
+      <aside class="col-md-2">
+            <%= button_to "Add Procedure", new_procedure_path, class: "btn btn-primary", :method => "get" %>
+      </aside>
     </section>
+<% end %>
+
