--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -16,11 +16,17 @@
       </h1>
     </section>
 
-  <% if logged_in? && current_user.admin?  %>
-     <%= button_to "Edit", edit_patient_visit_path(@patient), class: "btn btn-primary", :method => "get" %>
-  <% end %>
+
+<% if current_user.admin?  %>
+    <section class="new_visit">
+      <aside class="col-md-2">
+            <%= button_to "Edit Visit", edit_patient_visit_path(@patient), class: "btn btn-primary", :method => "get" %>
+      </aside>
+    </section>
+<% end %>
 
   </aside>
 </div>
 
 </div>
+
