--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@patient) do |f| %>
+<%= form_with model: @patient do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
   <%= f.label 'Last Name' %>
