--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -19,10 +19,11 @@
            </pre>
       </h1>
     </section>
-    <section class="new_visit">
+    <section class="buttons">
 	    
-	    <%= button_to "New Visit", new_patient_visit_path(@patient), class: "btn btn-primary", :method => "get" %>
-        
+    <%= button_to "New Visit", new_patient_visit_path(@patient), class:"btn btn-primary", method: 'get' %>
+    <p>
+
     </section>
   </aside>
   <div class="col-md-6">
