--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -12,6 +12,11 @@
 		Diagnosis : <%= @visit.diag_code %>
 		Procedure : <%= @visit.proc_code %>
 		Notes: <%= @visit.notes %>	     
+  		Status: <%= @visit.status %>
+  		Duration: <%= @visit.duration %>
+  		Type: <%= @visit.vis_type %>
+  		Entry by: <%= @visit.entry_by %>
+  		Entered at: <%= @visit.entry_ts %>
            </pre>
       </h1>
     </section>
