--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -21,7 +21,7 @@ html,body {
 
 #container {
    min-height:100%;
-   position:relative; /* relative */
+   position:relative; 
 }
 
 #header {
@@ -38,7 +38,7 @@ html,body {
    position:absolute;
    bottom:0;
    width:100%;
-   height:72px;   /* Height of the footer */
+   height:72px;   /* (72) Height of the footer */
 }
 
 section {
@@ -52,7 +52,7 @@ textarea {
 .center {
   text-align: center;
   h1 {
-    margin-bottom: 10px;
+    margin-bottom: 8px;
   }
 }
 
