--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -5,15 +5,10 @@
 	<td><%= patient.age %></td>
 	<td><%= patient.ohip_num %> </td>
 	<td><%= patient.phone %> </td> 
-	<td><%= patient.addr %> </td> 
-	<td><%= patient.city %> </td> 
-	<td><%= patient.prov %> </td> 
-	<td><%= patient.postal %> </td> 
+	<td><%= patient.addr+' '+patient.city+', '+patient.prov+' '+patient.postal %> </td> 
+
+  	<% if current_user.admin?  %>
+		<td> <%= link_to "delete", patient, method: :delete, data: { confirm: "Are you sure you want to delete #{patient.lname}?" } %> </td>
+	<% end %>
+
      </tr>
-
-
-<%#  <% if current_user.admin?  %>
-<%#    | <%= link_to "delete", patient, method: :delete,
-<%#                                  data: { confirm: "You sure?" } %>
-<%#  <% end %>
-
