--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,16 @@
 	     </div>
      <% end %>
 	</li>
+<% elsif controller_name == 'doctors' %>
+	<li class="nav-item active">
+        <%= form_with url: doctors_path, method: :get, skip_enforcing_utf8: :true do |f| %>
+             <div class="form-group form-group-sm">
+                <div class="col-xs-10">
+                  <%= f.search_field :findstr, placeholder: 'Find doctor', :onChange => 'javascript: this.form.submit()' %>
+                </div>
+             </div>
+     <% end %>
+        </li>
 <% end %>
 
 <li><%= link_to "Patients", patients_path %></li>
@@ -61,8 +71,4 @@
 $(document).on("focus", "[data-behaviour~='datepicker']", function(e){
     $(this).datepicker({"format": "yyyy-mm-dd", "weekStart": 1, "autoclose": true, "todayBtn": true, "todayHighlight": true});
 });
-
-//$(document).on("changeDate", "[data-behaviour~='datepicker']", function(e){
-//	$('#datepicker').submit();
-//});
 </script>
