find box for controllers, billings tweaks

--- a/app/views/doctors/_doctor.html.erb
+++ b/app/views/doctors/_doctor.html.erb
@@ -1,5 +1,5 @@
      <tr>
-	<td><%= link_to "#{doctor.lname}, #{doctor.fname}", doctor %> </td>
+	<td><%= link_to "#{doctor.full_name}", doctor %> </td>
 	<td><%= doctor.ph_type %></td> 
 	<td><%= doctor.service %> </td> 
 	<td><%= doctor.specialty %></td>
