--- a/app/views/procedures/index.html.erb
+++ b/app/views/procedures/index.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, 'All procedures') %>
 
+<h1> List of Procedures </h1>
+
 <ul class="users">
 <table style="width:1100px; padding: 10px;" >
   <thead>
