--- a/app/views/billings/_billing.html.erb
+++ b/app/views/billings/_billing.html.erb
@@ -1,17 +1,20 @@
+<% require 'Date' %>
+
 <tr>
-	  <td><%= billing.pat_code %></td>
-	  <td><%= billing.doc_code %></td>
-	  <td><%= billing.visit_date %></td>
+	  <td><%= billing.pat_name %></td>
+	  <td><%= billing.doc_name %></td>
 	  <td><%= billing.proc_code %></td>
 	  <td><%= billing.proc_units %></td>
 	  <td><%= billing.fee %></td>
 	  <td><%= billing.diag_code %></td>
 	  <td><%= billing.btype %></td>
 	  <td><%= billing.status %></td>
-	  <td><%= billing.submit_ts %></td>
-	  <td><%= billing.amt_paid %></td>
+	  <td><%= billing.remit_file %></td>
+	  <td><%= billing.submit_ts.to_date %></td>
 	  <td><%= billing.paid_date %> </td>
+	  <td><%= billing.amt_paid %> </td>
 	  <td><%= billing.mohref %> </td>
 </tr>
+
 
 
