--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -6,23 +6,25 @@
   </div>
 <% end %>
 
+<h1> Billings for <%= params['date'] %> </h1>
+
 <ul class="users">
-<table style="width:95%; padding: 10px;"> <!--class="table table-hover table-condensed" > -->
+<table style="width:100%; padding: 10px;"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
-          <th>pat_code</th>
-          <th>doc_code</th>
-          <th>visit_date</th>
-          <th>proc_code</th>
-          <th>proc_units</th>
-          <th>fee</th>
-          <th>diag_code</th>
-          <th>btype</th>
-          <th>status</th>
-          <th>submit_ts</th>
-	  <th>amt_paid</th>
-          <th>paid_date </th>
-          <th>mohref </th>
+          <th>Patient</th>
+          <th>Doctor</th>
+          <th>Procedure</th>
+          <th>Units</th>
+          <th>Fee</th>
+          <th>Diagnosis</th>
+          <th>Type</th>
+          <th>Status</th>
+	  <th>Remit File</th>
+	  <th>Submitted</th>
+          <th>Paid </th>
+	  <th>Amt.Paid</th>
+          <th>MOH Ref</th>
       </tr>
   </thead>
   <tbody>
