few minor changes

--- a/app/views/billings/_billing.html.erb
+++ b/app/views/billings/_billing.html.erb
@@ -1,5 +1,5 @@
 <tr>
-	  <td><%= billing.pat_name %></td>
+	<td><%= link_to billing.pat_name, billing %> </td>
 	  <td><%= billing.doc_name %></td>
 	  <td><%= billing.proc_code %></td>
 	  <td><%= billing.proc_units %></td>
