--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -19,9 +19,15 @@ html,body {
   padding-top: 0; 
 }
 
+.container {
+	width:99%;
+}
+
+
 #container {
    min-height:100%;
    position:relative; 
+   width:98%;
 }
 
 #header {
@@ -214,42 +220,8 @@ input {
   }
 }
 
-/* Search field */
 
-#custom-search-form {
-        margin:0;
-        margin-top: 5px;
-        padding: 0;
-    }
-
-    #custom-search-form .search-query {
-        padding-right: 3px;
-        padding-right: 4px \9;
-        padding-left: 3px;
-        padding-left: 4px \9;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
-
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-    }
-
-    #custom-search-form button {
-        border: 0;
-        background: none;
-        /** belows styles are working good */
-        padding: 2px 5px;
-        margin-top: 2px;
-        position: relative;
-        left: -28px;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-    }
-
-    .search-query:focus + button {
-        z-index: 3;
-    }
+.padding-0{
+    padding-right:0;
+    padding-left:0;
+}
