--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -2,11 +2,11 @@
 %>
 
 <tr>
-	<td><%= link_to time_tag(visit.entry_ts), patient_visit_path(pat,visit) %> </td>
+	<td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(pat,visit) %> </td>
 	<td><%= link_to pat.full_name, pat %></td>
 	<td><%= visit.doctor.lname %></td>
-	<td><%= visit.notes.to_s.first(40)+ '..'  %></td>
 	<td><%= visit.diag_code %></td>
 	<td><%= visit.proc_code %></td>
+	<td><%= visit.notes.to_s.first(40)+ '..'  %></td>
 
 </tr>
