--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -1,57 +1,101 @@
 <%= form_for (@patient) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
-  <%= f.label 'Health Card Number', class: "col-md-4 control-label" %>
-  <div class="col-md-6">
+  <%= f.label 'H Card', class: "col-md-1 control-label" %>
+  <div class="col-md-2 padding-0">
   <%= f.text_field :ohip_num %>
   </div>
 
-  <%= f.label 'Last Name', class: "col-md-4 control-label" %>
-  <div class="col-md-6">
-  <%= f.text_field :lname %>
+  <%= f.label 'Ver', class: "col-md-1 control-label" %>
+  <div class="col-md-1">
+  <%= f.text_field :ohip_ver %>
   </div>
-
-  <%= f.label :'First Name', class: "col-md-4 control-label" %>
-  <div class="col-md-6">
-  <%= f.text_field :fname %>
+  
+  <%= f.label 'Expires', class: "col-md-1 control-label" %>
+  <div class="col-md-2">
+  <%= f.date_field :hin_expiry, start_year: Date.today.year, end_year: Date.today.year+5 %>
   </div>
-
-  <%= f.label :Sex, class: "col-md-4 control-label" %>
-  <div class="col-md-6">
+  
+  <%= f.label :Sex, class: "col-md-1 control-label" %>
+  <div class="col-md-2">
   <%= f.select(:sex, $sexes ) %>
   </div>
 
-  <%= f.label :'Date Of Birth', class: "col-md-4 control-label" %>
-  <div class="col-md-6">
-	  <%= f.date_select  :dob, start_year: 1900, end_year: Date.today.year %>
+  <div class="col-md-12"> &nbsp; </div>
+
+  <%= f.label 'Last Name', class: "col-md-1 control-label" %>
+  <div class="col-md-3 padding-0">
+  <%= f.text_field :lname %>
   </div>
 
-  <%= f.label :'Phone Number', class: "col-md-4 control-label" %>
-  <div class="col-md-6">
+  <%= f.label :'First Name', class: "col-md-1 control-label" %>
+  <div class="col-md-3">
+  <%= f.text_field :fname %>
+  </div>
+
+  <%= f.label :"DOB", class: "col-md-1 control-label" %>
+  <div class="col-md-2">
+	  <%= f.date_field :dob, class: "datepicker", start_year: 1900, end_year: Date.today.year %>
+  </div>
+
+  <div class="col-md-12"> &nbsp; </div>
+
+  <%= f.label :'Phone', class: "col-md-1 control-label" %>
+  <div class="col-md-2 padding-0">
   <%= f.text_field :phone %>
   </div>
-
-  <%= f.label :Address, class: "col-md-4 control-label" %>
-  <div class="col-md-6">
+  
+  <%= f.label :'Mobile', class: "col-md-1 control-label" %>
+  <div class="col-md-3">
+  <%= f.text_field :mobile %>
+  </div>
+  
+  <%= f.label :'Alt Contact', class: "col-md-2 control-label" %>
+  <div class="col-md-2">
+  <%= f.text_field :alt_contact_name %>
+  </div>
+  
+  <div class="col-md-12"> &nbsp; </div>
+  
+  <%= f.label :Address, class: "col-md-1 control-label" %>
+  <div class="col-md-3 padding-0">
   <%= f.text_field :addr %>
   </div>
 
-  <%= f.label :Prov, class: "col-md-4 control-label" %>
-  <div class="col-md-6">
-  <%= f.select(:prov, $provinces ) %>
-  </div>
-
-  <%= f.label :City, class: "col-md-4 control-label" %>
-  <div class="col-md-6">
+  <%= f.label :City, class: "col-md-1 control-label" %>
+  <div class="col-md-2 padding-0">
   <%= f.text_field :city %>
   </div>
   
-  <%= f.label :Postal, class: "col-md-4 control-label" %>
-  <div class="col-md-6">
+  <div class="col-md-1">
+  <%= f.select(:prov, $provinces ) %>
+  </div>
+
+  <%= f.label :Postal, class: "col-sm-1 control-label" %>
+  <div class="col-md-2">
   <%= f.text_field :postal %>
   </div>
 
-  <div class="col-md-10">
+  <div class="col-md-12"> &nbsp; </div>
+
+  <%= f.label :family_doctor, class: "col-md-1 control-label" %>
+  <div class="col-md-2 padding-0">
+  <%= f.text_field :family_dr %>
+  </div>
+  
+  <%= f.label :pharmacy, class: "col-md-2 control-label" %>
+  <div class="col-md-2 padding-0">
+  <%= f.text_field :pharmacy %>
+  </div>
+  
+  <%= f.label :pharmacy_phone, class: "col-md-2 control-label" %>
+  <div class="col-md-2">
+  <%= f.text_field :pharm_phone %>
+  </div>
+
+  <div class="col-md-12"> &nbsp; </div>
+
+  <div class="col-md-11">
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
   </div>
 
