--- a/app/views/visits/edit.html.erb
+++ b/app/views/visits/edit.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Edit Visit') %>
 <% provide(:button_text, 'Save changes') %>
-<h1>Update Visit Details</h1>
+<h1><%= @patient.full_name %> <%= @visit.entry_ts.strftime("%D %H:%M") %> : Update Visit Details</h1>
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <%= render 'form' %>
